--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "twig/twig": "^3.1"
+        "twig/twig": "^3.1",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {"App\\": "\\"}
